# MarinaTK

./: .clang-format  .gitmodules  CMakeLists.txt  DESIGN.md  README.md  meson.build
doc/: Doxyfile.in  meson.build
include/: backend.hpp  geometry.hpp  layout.hpp  mtk.hpp  renderer.hpp  sceneGraph.hpp  units.h  value.h
include/backend/: SDL2.hpp
include/components/: component.hpp  components.hpp  computed.hpp  container.hpp  grid.hpp  text.hpp  window.hpp
include/renderer_backend/: SDL2_renderer.hpp
src/: value.cpp
src/backend/SDL2/: SDL2.cpp
src/components/: container.cpp  grid.cpp  text.cpp  window.cpp
src/renderer/: SDL2_renderer.cpp
src/sceneGraph/: geometry.cpp  geometry.hpp  sceneGraph.cpp  sceneGraph.hpp  sceneNode.cpp
src/ui/: layout.cpp
tests/: demoComponents.cpp  demoComponents2.cpp  demoLayout.cpp  demoSDL2Renderer.cpp  testGeometry.cpp  testSceneGraph.cpp
